--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@ body, html {
   font-family: 'Work Sans', sans-serif;
   font-size: 100px;
   color: #ffffff;
+  background-color: #0a192f;
 }
 
 .backgroundImage{
@@ -13,6 +14,22 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  filter: brightness(50%);
+}
+
+/* Center box */
+.view-me-button{
+  border-style: solid;
+  border-color: white;
+  background-color: transparent;
+  padding: 5px 40px;
+}
+
+.view-me-button:hover {
+  color: #ffffff;
+  background-color: #5DFFD6;
+  border-color: #5DFFD6;
+  padding: 5px 40px;
 }
 
 /* center div */
@@ -29,7 +46,7 @@ body, html {
 /* Header & Nav Bar */
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 .head{
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     height: 8%;
@@ -39,6 +56,7 @@ body, html {
 .container {
 	width: 100%;
 	margin: 0 auto;
+
 }
 
 header::after {
@@ -73,7 +91,8 @@ nav a {
 }
 
 nav a:hover {
-  color: #4c9c9b;
+  /* color: #5DFFD6; */
+  color: #90FBDC;
 }
 
 nav a::before {
@@ -92,12 +111,6 @@ nav a::before {
 nav a:hover::before {
   width: 100%;
 }
-
-
-
-
-
-
 
 .nav-box{
   position:fixed;
@@ -123,11 +136,133 @@ nav a:hover::before {
   background-color: black;
   color: white;
 }
-
-p{
-  color:black;
+/* f */
+.about-me{
+  color: #000;
+  padding-top: 0px;
+  font-size: 30px;
+  background-color: blueviolet;
 }
 
+.background-history{
+  background-color: #4c9c9b;
+  color:white;
+  padding-top: 0px;
+  font-size: 30px;
+}
 
+/* Section title  */
+.section-title{
+  color: #4c9c9b;
+  text-align: center;
 
+  margin: auto;
+  width: 50%;
+}
+/* ==== Div in image ==== */
+.center-box-text{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 25%;
+  font-size: 30px;
+  /* background-color: red; */
+  margin-top: 20%;
+  text-align: center;
+  display:inline;  
+}
 
+.name-highlight{
+  /* color: #4c9c9b; */
+  color: #5DFFD6;
+}
+
+/* ==== About me section ==== */
+.about-me-section{
+  margin: auto;
+  width: 50%;
+  /* border-color: white; */
+  /* border-style: solid; */
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  color: #5DFFD6;
+}
+
+#about-me-title-box{
+  width: 100%;
+  margin-bottom: 10px;
+  color: #CDD6F3;
+  max-height: 100px;
+
+  /* background-color: red; */
+}
+
+#hr-about-me{
+  padding-left: 10px;
+  width: 100%;
+}
+
+#about-me-title{
+  font-size: 40px;
+  padding:10px;
+}
+    /* Grid */
+.about-me-container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  /* background-color: red; */
+  padding: 10px;
+}
+.about-me-item {
+  /* background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8); */
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+  color: #8992AD;
+  text-align: left;
+}
+
+.image-of-me{
+  max-height: 100%;
+  max-width: 100%;
+}
+
+    /* Grid responsive */
+@media only screen 
+    and (max-width: 768px){
+  .about-me-section{
+    margin: auto;
+    width: 100%;
+    /* border-color: white; */
+    /* border-style: solid; */
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #5DFFD6;
+  }
+  /* Nav bar  */
+  .head{
+    font-size: 10px;
+  }
+  /*  About me  */
+  .about-me-container {
+    display: grid;
+    grid-template-columns: auto;
+    padding: 10px;
+  }
+  .about-me-item {
+    padding: 20px;
+    font-size: 20px;
+    text-align: center;
+  }
+  #about-me-title{
+    font-size: 40px;
+    font-size: 40px;
+  }
+  #hr-about-me{
+    padding-left: 10px;
+    width: 60%;
+  }
+}
