--- a/styles/index.css
+++ b/styles/index.css
@@ -2,84 +2,83 @@
 body, html {
   height: 100%;
   margin: 0;
-  font-family: 'Work Sans', sans-serif;
-  font-size: 100px;
+  /* font-size: 100px; */
   color: #ffffff;
   background-color: #0a192f;
 }
 
-/* === Header & Nav Bar === */
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-.head{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 8%;
-    font-size: 30px;
-    z-index: 2;
-}
-
-header::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-.container {
-	width: 100%;
-	margin: 0 auto;
-
-}
-
-nav {
-  float: right;
-  padding-right: 50px;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-
-  position: relative;
-}
-
-nav a {
-  color: #ffffff;
-  text-decoration: none;
+/* === Nav Bar === */
+.navbar .navbar-nav li a {
+  font-size: 30px;
   text-transform: uppercase;
+  color:#ffffff;
 }
 
-nav a:hover {
-  /* color: #5DFFD6; */
-  color: #90FBDC;
+.navbar-container{
+  border-style: none;
 }
 
-nav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  background-color: #ffffff;
+@media (min-width: 768px) {
+  .navbar {
+    height: 120px;
+    background-color: transparent;
+  }
 
-  position: absolute;
-  top: 0;
-  width: 0%;
+  .navbar-nav>li>a {
+    padding: 0;
+    margin-top: 35px;
+    margin-left: 50px;
+    line-height: 70px;
+  }
 
-  transition: all ease-in-out 250ms;
+  /* Navbar when scrolled */
+
+  .navbar-scroll {
+    height: 70px;
+  }
+
+  .navbar-scroll #top-social-menu {
+    display: none;
+    transition: all 0.2s ease-out;
+  }
+
+  .navbar-scroll .navbar-brand {
+    height: 70px;
+    line-height: 70px;
+  }
+
+  .navbar-scroll .navbar-nav>li>a {
+    opacity: 1;
+    padding: 0;
+    margin-top: 0;
+  }
 }
 
-nav a:hover::before {
-  width: 100%;
+/* # Hover Link Effect
+================================ */
+@media (min-width: 768px) {
+  .navbar-nav>li>a::after {
+    position: absolute;
+    top: 80%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #5DFFD6;
+    content: '';
+    opacity: 0;
+    transition: height 0.3s, opacity 0.3s, transform 0.3s;
+    transform: translateY(-10px);
+  }
+
+  .navbar-nav>li>a:hover::after,
+  .navbar-nav>li>a:focus::after {
+    height: 2px;
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 /* === Background image === */
-
 .backgroundImage{
   background-image: url("../images/mainPage.jpeg");
   height: 100%; 
@@ -90,22 +89,20 @@ nav a:hover::before {
   z-index: 1;
 }
 
-/* ==== Div in image ==== */
+/* ==== Div in center box with text of name  ==== */
 .center-box-text{
   position: absolute;
   top: 0;
   width: 100%;
   height: 25%;
   font-size: 30px;
-  /* background-color: red; */
   margin-top: 20%;
   text-align: center;
   display:inline;  
   z-index: 2;
 }
-
+    /* Button to go down */
 .name-highlight{
-  /* color: #4c9c9b; */
   color: #5DFFD6;
 }
 
@@ -122,22 +119,6 @@ nav a:hover::before {
   border-color: #5DFFD6;
   padding: 5px 40px;
 }
-
-/* === about me section === */
-.about-me{
-  color: #000;
-  padding-top: 0px;
-  font-size: 30px;
-  /* background-color: blueviolet; */
-}
-
-.background-history{
-  background-color: #4c9c9b;
-  color:white;
-  padding-top: 0px;
-  font-size: 30px;
-}
-
 /* ==== About me section ==== */
 .about-me-section{
   margin: auto;
@@ -157,17 +138,17 @@ nav a:hover::before {
   max-height: 100px;
 }
 
-#hr-about-me{
-  padding-left: 10px;
-  width: 100%;
-}
-
 #about-me-title{
   font-size: 40px;
   padding:10px;
 }
 
-/* === About me grid === */
+#hr-about-me{
+  padding-left: 10px;
+  width: 100%;
+}
+
+    /* === About me grid === */
 .about-me-container {
   display: grid;
   grid-template-columns: 60% 40%;
@@ -175,8 +156,6 @@ nav a:hover::before {
   padding: 10px;
 }
 .about-me-item {
-  /* background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8); */
   padding: 20px;
   font-size: 20px;
   text-align: center;
@@ -189,7 +168,7 @@ nav a:hover::before {
   max-width: 100%;
 }
 
-/* TIME LINE */
+/* === Time line === */
 .timeline-container{
   background-color: #ffffff;
   margin-top: 100px;
@@ -208,7 +187,7 @@ nav a:hover::before {
   font-size: 50px;
   color: #4c9c9b;
 }
-    /* Scolling */
+    /* === Scrolling ===  */
 .timeline-scroll-box{
   width: 100%;
   height: 100%;
@@ -293,37 +272,56 @@ nav a:hover::before {
 
 
 /* === Grid responsive === */
-@media only screen 
-    and (max-width: 768px){
+@media only screen and (max-width: 768px){
+  /* Center Box */
+  .center-box-text{
+    font-size: 20px;
+    margin: auto;
+    /* width: 50%; */
+    margin-top: 200px;
+  }
+
   .about-me-section{
     margin: auto;
     width: 100%;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
     color: #5DFFD6;
   }
-  /* Nav bar  */
-  .head{
-    font-size: 10px;
-  }
+
   /*  About me  */
   .about-me-container {
     display: grid;
     grid-template-columns: auto;
     padding: 10px;
   }
+
   .about-me-item {
     padding: 20px;
     font-size: 20px;
     text-align: center;
   }
+
   #about-me-title{
     font-size: 40px;
-    font-size: 40px;
   }
+
   #hr-about-me{
     padding-left: 10px;
     width: 60%;
+  }
+
+  
+  /*  Time line */
+  .grid-container {
+    grid-template-columns: 70% 70% 70% 70%;
+  }
+
+  /* Footer */
+  .footer-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 10px;
+    /* background-color: #2196F3; */
+    padding: 10px;
   }
 }
