--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,76 @@
+.topnav {
+  overflow: hidden;
+  background-color: transparent;
+  
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 25%;
+  font-size: 30px;
+  z-index: 2;
+  right:0;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  width: 10%;
+}
+
+.topnav a:hover {
+  /* color: #5DFFD6; */
+  color: #90FBDC;
+}
+
+.topnav a::before {
+  content: '';
+  display: block;
+  height: 5px;
+  background-color: #ffffff;
+
+  position: absolute;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+.topnav a:hover::before {
+  width: 8%;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 /* === Body and html === */
 body, html {
   height: 100%;
@@ -51,30 +124,6 @@ body, html {
     opacity: 1;
     padding: 0;
     margin-top: 0;
-  }
-}
-
-/* # Hover Link Effect
-================================ */
-@media (min-width: 768px) {
-  .navbar-nav>li>a::after {
-    position: absolute;
-    top: 80%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: #5DFFD6;
-    content: '';
-    opacity: 0;
-    transition: height 0.3s, opacity 0.3s, transform 0.3s;
-    transform: translateY(-10px);
-  }
-
-  .navbar-nav>li>a:hover::after,
-  .navbar-nav>li>a:focus::after {
-    height: 2px;
-    opacity: 1;
-    transform: translateY(0px);
   }
 }
 
@@ -278,7 +327,7 @@ body, html {
     font-size: 20px;
     margin: auto;
     /* width: 50%; */
-    margin-top: 200px;
+    margin-top: 300px;
   }
 
   .about-me-section{
