--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,13 +1,104 @@
-/* ==== Image ==== */
+/* === Body and html === */
 body, html {
   height: 100%;
   margin: 0;
   font-family: 'Work Sans', sans-serif;
   font-size: 100px;
   color: #ffffff;
-  max-width: 100%;
+  background-color: #E5E5E5;
 }
 
+/* ==== Navigation ==== */
+.topnav {
+  overflow: hidden;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 25%;
+  font-size: 30px;
+  z-index: 2;
+  right:0;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  width: 10%;
+}
+
+.topnav a:hover {
+  color: #90FBDC;
+}
+
+.topnav a::before {
+  content: '';
+  display: block;
+  height: 5px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  width: 0%;
+  transition: all ease-in-out 250ms;
+}
+
+.topnav a:hover::before {
+  width: 8%;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+/* Navbar responsive */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child){
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive{
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .center-box-text{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    /* height: 90%; */
+    font-size: 15px;
+    /* background-color: red; */
+    margin-top: 60%;
+    text-align: center;
+    display:inline;  
+    z-index: 2;
+  }
+}
+/* ==== Background image ==== */
 .backgroundImage{
   background-image: url("../images/mainPage.jpeg");
   height: 100%; 
@@ -15,7 +106,14 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   filter: brightness(50%);
+  position: relative;
 }
+
+/* @media screen and (max-width: 600px) {
+  .backgroundImage{
+    background-image: url("../images/halfImage.png");
+  }
+} */
 
 /* ==== Div in image ==== */
 .center-box-text{
@@ -25,81 +123,10 @@ body, html {
   height: 25%;
   font-size: 30px;
   /* background-color: red; */
-  margin-top: 10%;
+  margin-top: 5%;
   text-align: center;
   display:inline;  
   z-index: 2;
-}
-
-#my-name{
-  font-size: 50px
-}
-
-/* ==== Header & Nav Bar ==== */
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-.head{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 8%;
-    font-size: 30px;
-}
-
-.container {
-	width: 100%;
-	margin: 0 auto;
-}
-
-header::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-nav {
-  float: right;
-  padding-right: 50px;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-
-  position: relative;
-}
-
-nav a {
-  color: #ffffff;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-nav a:hover {
-  color: #4c9c9b;
-}
-
-nav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  background-color: #ffffff;
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
-}
-
-nav a:hover::before {
-  width: 100%;
 }
 
 /* ==== Center name ==== */
@@ -129,8 +156,20 @@ nav a:hover::before {
   font-size: 30px;
 }
 
+@media screen and (max-width: 600px) {
+  #my-name{
+    font-size: 30px;
+    padding-top: 200px;
+  }
+  #text-info{
+    font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
 /* === Resume part === */
-  /* Carrer */
+  /* Career */
 .experiences-box{
   margin: auto;
   max-width: 70%;
@@ -153,10 +192,34 @@ nav a:hover::before {
   margin-top: 100px;
   margin-bottom: 100px;
 }
-hr{
-  color: blue;
+
+#date-text{
+  font-size: 20px;
+  padding-top: 20px;
+}
+.resume-list {
+  list-style-type: circle;
+  float: left;
+  font-size: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  .eductation-container{
+    font-size: 15px;
+  }
+
+  #date-text{
+    font-size: 12px;
+  }
+
+  .resume-list {
+    list-style-type: circle;
+    font-size: 10px;
+  }
+}
+
+
+/* ==== Resume ====  */
 .resume-container {
   display: grid;
   grid-template-columns: 35% 65%;
@@ -172,17 +235,7 @@ hr{
   padding-top: 0px;
 }
 
-#date-text{
-  font-size: 20px;
-  padding-top: 20px;
-}
-.resume-list {
-  list-style-type: circle;
-  float: left;
-  font-size: 20px;
-}
 /* === Honor section ===*/
-
 .honor-container {
   display: grid;
   grid-template-columns: 100%;
@@ -323,8 +376,8 @@ hr{
 
 /* === relevant-coursework === */
 .relevant-coursework{
- font-size: 30px;
- text-align: center;
+  font-size: 30px;
+  text-align: center;
 }
 
 .relevant-coursework-container{
@@ -344,8 +397,41 @@ hr{
 .skills-container {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  /* background-color: #2196F3; */
   padding: 10px;
+}
+
+@media only screen 
+    and (max-width: 768px){
+  .skills-container {
+    grid-template-columns: 100%;
+  }   
+  .skills-item {
+    text-align: right;
+  }
+  
+  .skills-item-right{
+    text-align: right;
+  }   
+
+  .resume-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-gap: 10px;
+    padding: 10px;
+    color: #000000;
+    margin-bottom: 20px;
+  }  
+
+  .resume-container > div {
+    text-align: left;
+    /* font-size: 20px; */
+    padding-top: 0px;
+    font-size: 15px;
+  }  
+
+  .company-title{
+    font-size: 15px;
+  }
 }
 
 .skills-item {
@@ -360,7 +446,7 @@ hr{
   /* background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8); */
   padding: 20px;
-  font-size: 30px;
+  font-size: 25px;
   text-align: right; 
 }
 
@@ -384,6 +470,7 @@ hr{
   right: 5%;
   top: 0px;
   /* position: absolute; */
+  overflow-y: hidden;
 }
 
 .btn-group .button {
@@ -463,4 +550,14 @@ hr{
   border-top-right-radius: 50% 50%;
   border-bottom-right-radius: 50% 50%;
   border-bottom-left-radius: 50% 50%;
+}
+
+@media only screen and (max-width: 768px){
+  .footer-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 10px;
+    /* background-color: #2196F3; */
+    padding: 10px;
+  }
 }
