--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,11 +1,10 @@
 /* background image info */
 body {
-    background-image: url('../images/body_image.jpeg');    
     background-position: center center;
     background-repeat: no-repeat;    
     background-attachment: fixed;
     background-size: cover;
-    background-color:#464646;
+    background-color:#22AAA1;
 }
 /* Computer Browser */
 #menu-bar {
@@ -133,157 +132,140 @@ body {
         color: #fff;
     }
 }
-/* info in center */
-.content{
-    color: white;
-    margin: auto;
-    width: 50%;
-    text-align: center;
-    margin-top: 35vh;
-    margin-bottom: 45vh;
-}
-#name-strong{
-    color: #5DFFD6;
-}
-@media screen and (max-width: 600px) {
-    .content{
-        color: white;
-        margin: auto;
-        width: 50%;
-        text-align: center;
-        margin-top: 35%;
-        margin-bottom: 100%;
-    }
-}
-/* About me */
-.about-me{
-    background-color: #0a192f;
-}
-.about-me-section{
-    margin: auto;
-    width: 50%;
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    color: #5DFFD6;
-    padding-bottom: 100px;
-    padding-top: 100px;
-}
-#about-me-title-box{
+/* Blog post */
+.band {
     width: 100%;
-    margin-bottom: 10px;
-    color: #CDD6F3;
-    max-height: 100px;
-}
-#about-me-title{
-    font-size: 40px;
-    padding:10px;
-}
-#hr-about-me{
-    padding-left: 10px;
-    width: 100%;
-}
-    /*  About me grid  */
-.about-me-container {
+    max-width: 90%;
+    margin: 1px auto;
     display: grid;
-    grid-template-columns: 60% 40%;
-    padding: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+    
 }
-.about-me-item {
-    padding: 20px;
-    font-size: 20px;
-    text-align: center;
-    color: #8992AD;
-    text-align: left;
-}
-.image-of-me{
-    max-height: 100%;
-    max-width: 100%;
-}
-
-/* About me responsive  */
-@media screen and (max-width: 600px) {
-    .about-me-section{
-        margin: auto;
-        width: 85%;
-        text-align: center;
-        margin-top: 100px;
-        margin-bottom: 50px;
-        color: #5DFFD6;
-        padding-bottom: 100px;
-        padding-top: 100px;
-    }
-    .about-me-container {
-        display: grid;
-        grid-template-columns: 100%;
-        padding: 10px;
-    }
-}
-/* === Time line === */
-.timeline-container{
-    background-color: #ffffff;
-    margin-top: 100px;
-    padding-top: 50px;
-    padding-bottom: 100px;
-}
-.timeline-title-container{
-    margin: auto;
-    width: 70%;
-    padding-bottom: 10px;
-}
-#timeline-title{
-    text-align: center;
-    font-size: 50px;
-    color: #4c9c9b;
-}
-    /* === Scrolling ===  */
-.timeline-scroll-box{
+.line-top{
     width: 100%;
-    height: 100%;
-    overflow-x: auto;
-    overflow-y: scroll;
-}
-.grid-container {
-    display: grid;
-    grid-template-columns: 40% 40% 40% 40%;
-    grid-gap: 10px;
-    background-color: #ffffff;
-    padding: 10px;
-    /* adjusts height based on  .timeline-scroll height*/
-    height: 100%;
-    color: #000;
-    font-size: 10px;
-}
-.grid-container > div {
-    padding: 20px 0;
-}
-.timeline-photos{
-    display: block;
+    height: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #d3d3d3;
 }
-.timeline-date{
-    font-size: 15px;
-    color: 4c9c9b;
-    padding-left: 10px;
+.line-bottom{
+    width: 100%;
+    height: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    border-bottom: 1px solid #d3d3d3;
 }
-.timeline-item{
-    color:#4c9c9b;
-    padding-left: 30px;
-    padding-right: 30px;
+.lang-used{
+    padding-top: 1px;
+}
+@media only screen and (min-width: 500px) {
+    .band {
+    grid-template-columns: 1fr 1fr;
+    }  
+    .item-1 {
+    grid-column: 1/ span 2;
+    }
+    .item-1 h1 {
+    font-size: 30px;
+    }
+    #title-name{
     font-size: 20px;
+    }
 }
+@media only screen and (min-width: 850px) {
+    .band {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+/* card */
+.card {
+    min-height: 100%;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: #444;
+    position: relative;
+    top: 0;
+    transition: all .1s ease-in;
+    border-style: none;
+}
+.card:hover {
+    top: -2px;
+    box-shadow: 0 4px 5px rgba(0,0,0,0.2);
+}
+.card article {
+    padding: 20px;
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.card .thumb {
+    padding-bottom: 60%;
+    background-size: cover;
+    background-position: center center;
+}
+.card p { 
+    flex: 1; /* make p grow to fill available space*/
+    line-height: 1.4;
+}/* typography */
+h1 {
+    text-align: left;
+    font-size: 20px;
+    margin: 0;
+    color: #333;
+    font-weight: 800;
+    /* padding-bottom: 100px; */
+    /* background-color: red; */
+}
+hr.new1 {
+    display: block; height: 1px;
+    border: 0; border-top: 1px solid #ccc;
+    margin: 1em 0; padding: 0;
+}
+.description-text{
+    font-size: 20px;
+    text-align: left;
+    font-weight: 50;
+}
+.card span {
+    font-size: 12px;
+    font-weight: bold;
+    color: #999;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    margin: 2em 0 0 0;
+}
+/* project list */
+.portfolio-container-box{
+    margin: auto;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.portfolio-container > div {
+    /* background-color: red; */
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+.card-port{
+    /* padding: 10px;
+    box-shadow: 10px 10px 5px grey; */
+    height: 100%;
+    /* background-color: red; */
+}
+
 @media screen and (max-width: 600px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 80% 80% 80% 80%;
-        grid-gap: 10px;
-        background-color: #ffffff;
-        padding: 10px;
-        /* adjusts height based on  .timeline-scroll height*/
-        height: 100%;
-        color: #000;
-        font-size: 10px;
+    .portfolio-container-box{
+        margin-top: 50px;
     }
 }
