--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,563 +1,454 @@
-/* === Body and html === */
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: 'Work Sans', sans-serif;
-  font-size: 100px;
-  color: #ffffff;
-  background-color: #E5E5E5;
+/* background image info */
+body {
+    background-color:#fff;
+    font-family: 'Roboto', sans-serif;
 }
-
-/* ==== Navigation ==== */
-.topnav {
-  overflow: hidden;
-  background-color: transparent;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 25%;
-  font-size: 30px;
-  z-index: 2;
-  right:0;
+/* Computer Browser */
+#menu-bar {
+    overflow: hidden;
+    background-color: #0a192f;
 }
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  width: 10%;
-}
-
-.topnav a:hover {
-  color: #90FBDC;
-}
-
-.topnav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  background-color: #ffffff;
-  position: absolute;
-  top: 0;
-  width: 0%;
-  transition: all ease-in-out 250ms;
-}
-
-.topnav a:hover::before {
-  width: 8%;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-/* Navbar responsive */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child){
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-right: 20px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive{
-    position: relative;
-  }
-
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .center-box-text{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    /* height: 90%; */
-    font-size: 15px;
-    /* background-color: red; */
-    margin-top: 60%;
+#menu-bar a {
+    color: white;
     text-align: center;
-    display:inline;  
-    z-index: 2;
-  }
-}
-/* ==== Background image ==== */
-.backgroundImage{
-  background-image: url("../images/mainPage.jpeg");
-  height: 100%; 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: brightness(50%);
-  position: relative;
-}
-
-/* @media screen and (max-width: 600px) {
-  .backgroundImage{
-    background-image: url("../images/halfImage.png");
-  }
-} */
-
-/* ==== Div in image ==== */
-.center-box-text{
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 25%;
-  font-size: 30px;
-  /* background-color: red; */
-  margin-top: 5%;
-  text-align: center;
-  display:inline;  
-  z-index: 2;
-}
-
-/* ==== Center name ==== */
-.box-in-middle{
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 8%;
-  font-size: 30px;
-  margin-top: 100px;
-}
-
-#my-name{
-  text-align: center;
-  font-size: 100px;
-}
-
-.names-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 1px;
-  padding: 10px;
-}
-
-.names-container> div {
-  text-align: center;
-  font-size: 30px;
-}
-
-@media screen and (max-width: 600px) {
-  #my-name{
-    font-size: 30px;
-    padding-top: 200px;
-  }
-  #text-info{
+    padding: 14px 16px;
+    text-decoration: none;
     font-size: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
 }
-
-/* === Resume part === */
-  /* Career */
-.experiences-box{
-  margin: auto;
-  max-width: 70%;
+#menu-bar a:hover {
+    background-color: #5DFFD6;
+    color: black;
 }
-
-.experiences-title{
-  margin-top: 10px;
-  text-align: center;
-  font-size: 50px;
-  color: #4c9c9b;
+#menu-bar a.active {
+    background-color: #0096FF;
+    color: white;
 }
-
-.eductation-container{
-  font-size: 30px;
-  color:#000000;
-  margin-bottom: 10px;
-}
-
-.education-box{
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-#date-text{
-  font-size: 20px;
-  padding-top: 20px;
-}
-.resume-list {
-  list-style-type: circle;
-  float: left;
-  font-size: 20px;
-}
-
-@media screen and (max-width: 600px) {
-  .eductation-container{
-    font-size: 15px;
-  }
-
-  #date-text{
-    font-size: 12px;
-  }
-
-  .resume-list {
-    list-style-type: circle;
-    font-size: 10px;
-  }
-}
-
-
-/* ==== Resume ====  */
-.resume-container {
-  display: grid;
-  grid-template-columns: 35% 65%;
-  grid-gap: 10px;
-  padding: 10px;
-  color: #000000;
-  margin-bottom: 20px;
-}
-
-.resume-container > div {
-  text-align: left;
-  font-size: 30px;
-  padding-top: 0px;
-}
-
-/* === Honor section ===*/
-.honor-container {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-gap: 10px;
-  padding: 10px;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.honor-container > div {
-  text-align: center;
-  padding-top: 0px;
-}
-.honor-name{
-  font-size: 35px;
-  text-decoration: underline;
-}
-.honor-info-text{
-  font-size: 25px;
-  margin-top: 50px;
-  padding-bottom: 50px;
-}
-
-.image-slide-one{
-  margin: auto;
-  height: auto;
-  max-width: 40%;
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-
-.image-slide-two{
-  margin: auto;
-  height: auto;
-  max-width: 10%;
-  padding-bottom: 5px;
-  padding-top: 5px;
-}
-
-.image-slide-three{
-  margin: auto;
-  height: auto;
-  max-width: 30%;
-  padding-bottom: 10px;
-  padding-top: 0px;
-}
-    /* ============================ */
-    /* ==== Slideshow container ====*/
-    /* ============================ */
-
-* {box-sizing: border-box}
-
-.slideshow-container {
-  margin: auto;
-  position: relative;
-  background: #4c9c9b;
-  max-height: 600px;
-  max-width: 90%;
-}
-
-/* Slides */
-.mySlides {
-  display: none;
-  padding: 80px;
-  text-align: center;
-  font-size: 30px;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
-}
-
-/* The dot/bullet/indicator container */
-.dot-container {
+.nav{
+    float: right;
+    color: #f2f2f2;
     text-align: center;
-    padding: 10px;
-    /* background: #ddd; */
-    max-height: 100px;
-    padding-top: 0px;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
 }
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+/*  iPhone size */
+@media screen and (max-width: 600px) {
+    body {
+        /* background-image: url('../images/responsiveBody.png');     */
+        background-position: center center;
+        background-repeat: no-repeat;    
+        background-attachment: fixed;
+        background-size: cover;
+        /* change background */
+        background-color:#0a192f;
+    }
+    #menu{
+        width: 35px;
+        height: 30px;
+        margin: 30px 0 20px 20px;
+        cursor: pointer;
+    }
+    .bar{
+        height: 5px;
+        width: 100%;
+        background-color: #fff;
+        display: block;
+        border-radius: 5px;
+        transition: 0.3s ease;
+    }
+    #bar1{
+        transform: translateY(-4px);
+    }
+    #bar3{
+        transform: translateY(4px);
+    }
+    .nav li a{
+        color: #fff;
+        text-decoration: none;
+    }
+    .nav li a:hover{
+        font-weight: normal;
+    }
+    .nav li{
+        list-style: none;
+        padding: 16px 0;
+    }
+    .nav{
+        padding: 0;
+        margin: 0 20px;
+        transition: .9s ease;
+        display: none;
+    }
+    .menu-bg, #menu-bar{
+        top: 0;
+        left: 0;
+        position: absolute;
+    }
+    .menu-bg{
+        z-index: 1;
+        width: 0;
+        height: 0;
+        margin: 30px 0 20px 20px;
+        background: radial-gradient(circle,#0a192f,#0a192f);
+        border-radius: 50%;
+        transition: 0.3s ease;
+    }
+    #menu-bar{
+        z-index: 2;	
+    }
+    .change-bg{
+        width: 550px;
+        height: 540px;
+        transform: translate(-60%,-30%);
+    }
+    .change .bar{
+        background-color: white;
+    }
+    .change #bar1{
+        transform: translateY(4px) rotateZ(-45deg);
+    }
+    .change #bar3{
+        transform: translateY(-6px) rotate(45deg);
+    }
+    .change #bar2{
+        opacity: 0;
+    }
+    .change{
+        display: block;
+    }
+    /* Edits for browser */
+    #menu-bar{
+        background-color: transparent;
+    }
+    /* Hover over */
+    #menu-bar a:hover {
+        background-color: #0a192f;
+        color: #fff;
+    }
+    #menu-bar a.active {
+        background-color: #0a192f;
+        color: #fff;
+    }
 }
-
-/* Add a background color to the active dot/circle */
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-
-/* ==== Go down button ==== */
-.go-down{
-  height: 80px;
-  width: 110px;
-  display: block;
-  position: absolute;
-  bottom: 0px;
-  right: 5%;
-  background-color: #ffffff;
-  text-align: center;
-  z-index: 6;
-  border: none;
-}
-
-
-/* === relevant-coursework === */
-.relevant-coursework{
-  font-size: 30px;
-  text-align: center;
-}
-
-.relevant-coursework-container{
-  color: #000000;
-}
-/* === skills-container === */
-.skills-background{
-  background-color: black;
-}
-.skills-box{
-  margin: auto;
-  width: 70%;
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
-
-.skills-container {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  padding: 10px;
-}
-
-@media only screen 
-    and (max-width: 768px){
-  .skills-container {
-    grid-template-columns: 100%;
-  }   
-  .skills-item {
-    text-align: right;
-  }
-  
-  .skills-item-right{
-    text-align: right;
-  }   
-
-  .resume-container {
+/* Top half of resume from image to text*/
+.top-half{
     display: grid;
-    grid-template-columns: 100%;
-    grid-gap: 10px;
-    padding: 10px;
-    color: #000000;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: auto auto;
+    background-color: #fff;
+    padding-top:100px;
+    padding-left: 100px;
+    padding-right: 100px;
+}  
+.top-half > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    font-size: 30px;
+}
+/* left side of container */
+.left-container {
+    display: grid;
+    grid-template-columns: auto;
+    background-color: #272830;
+    padding: 1px;
+}
+.left-items {
+    padding: 2px;
+    font-size: 30px;
+    text-align: right;
+}
+        /* Image on the left side */
+.image-container{
+    max-width:100%;
+    max-height:100%;
+}
+.contact-section{
+    text-align: right;
+    padding-right: 10px;    
+}
+.logo-container {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.logo-item-left{
+    padding: 20px;
+    font-size: 30px;
+    text-align: right;
+}
+.phone-email-title{
+    font-size: 20px;
+    margin-bottom: 0px;
+    font-weight: bold;
+    color:white;
+}
+.phone-email-name{
+    font-size: 20px;
+    color:white;
+}
+.logo-item{
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    /* border: 1px solid rgba(0, 0, 0, 0.8); */
+    padding-top: 25px;
+}
+.circle-logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border-style: solid;
+    border-color:#fff;
+    border-width: 2px;
+}
+/* Education */
+.Education-block{
+    width: 100%;
+    height: 50px;
+    background: #bda241;
     margin-bottom: 20px;
-  }  
-
-  .resume-container > div {
-    text-align: left;
-    /* font-size: 20px; */
-    padding-top: 0px;
-    font-size: 15px;
-  }  
-
-  .company-title{
-    font-size: 15px;
-  }
 }
-
-.skills-item {
-  /* background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8); */
-  padding: 20px;
-  font-size: 30px;
-  text-align: left;
+#text-ed{
+    padding-right: 10px;    
 }
-
-.skills-item-right{
-  /* background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8); */
-  padding: 20px;
-  font-size: 25px;
-  text-align: right; 
+.title-degree{
+    font-size: 20px;
+    margin-bottom: 0px;
+    font-weight: bold;
+    color:white;
+    padding-right: 10px;
 }
-
-.checked {
-  color: #4c9c9b;
+.degree-name{
+    font-size: 20px;
+    color:white;
+    padding-right: 10px;
+    margin-bottom: 0px;
 }
-
-.white{
-  color:white;
+.school-name{
+    font-size: 20px;
+    color:white;
+    padding-right: 10px;
+    margin-bottom: 30px;
 }
-
-/* === Vertical Nav Bar === */
-.sticky {
-  position: fixed;
-  position:sticky;
-  top: 0;
-  background-color: yellow;
-  font-size: 20px;
-  width: 110px;
-  float:right;
-  right: 5%;
-  top: 0px;
-  /* position: absolute; */
-  overflow-y: hidden;
-}
-
-.btn-group .button {
-  background-color: #222222; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-  width: 150px;
-  display: block;
-  width:100%;
-}
-
-.btn-group .button:not(:last-child) {
-  border-bottom: none; /* Prevent double borders */
-}
-
-.btn-group .button:hover {
-  background-color: #4c9c9b;
-}
-
-/* container box */
-.certificates-container{
-  background-color: red;
-  padding: 0;
-}
-
-.certificates-container-title{
-  margin: auto;
-  width: 70%;
-}
-
-#certificates-title{
-  color: #4c9c9b;
-  text-align: center;
-  font-size: 50px;
-}
-
-
-/* === Footer === */
-.foot-box {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 200px;
-  background-color:#0a192f;
-  color: white;
-  text-align: center;
-  padding-top: 40px;
-}
-
-.footer-container {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-gap: 10px;
-  /* background-color: #2196F3; */
-  padding: 10px;
-}
-
-.footer-container > div {
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
-
-.logo-button{
-  border-style: solid;
-  border-style: white;
-  height: 80px;
-  width: 80px;
-  border-top-left-radius: 50% 50%;
-  border-top-right-radius: 50% 50%;
-  border-bottom-right-radius: 50% 50%;
-  border-bottom-left-radius: 50% 50%;
-}
-
-@media only screen and (max-width: 768px){
-  .footer-container {
+/* Right side of top container  */
+.right-container{
     display: grid;
     grid-template-columns: auto;
     grid-gap: 10px;
-    /* background-color: #2196F3; */
+    background-color: #22AAA1;
     padding: 10px;
-  }
+    color: #fff;
+}
+.right-container > div {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    grid-template-rows: auto auto;
+    text-align: center;
+    font-size: 30px;
+}
+.top-right-side{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.Experience-box{
+    /* background-color: red; */
+    padding-left: 20px;
+}
+/*  Resizing left side*/
+@media screen and (max-width: 600px) {
+
+}
+/* Name section */
+#my-name{
+    padding-top: 14px;
+    font-size: 90px;
+    color:#fff;
+}
+.block-text{
+    width: 100%;
+    height: 50px;
+    padding-right: 0px;
+    background: #fff;
+    color:#22AAA1;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.line{
+    width: 100%;
+    height: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2px;
+    padding-top: 1px;
+    border-bottom: 5px solid white;
+}
+.section-title{
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1px;
+    /* padding: 20px; */
+}
+#profile-text{
+    margin-top:20px;
+    font-size: 20px;
+}
+@media screen and (max-width: 1000px) {
+    .top-half{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: auto auto;
+        background-color: #fff;
+        padding: 10px;
+        margin-top: 90px;
+    }  
+}
+/* Experience jobs list */
+.jobs-container {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    /* background-color: #2196F3; */
+}
+.jobs-item {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    /* border: 1px solid rgba(0, 0, 0, 0.8); */
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+}
+.company-name{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+}
+.time-working{
+    font-size: 20px;
+    text-align: left;
+}
+.position{
+    font-size: 20px;
+    text-align: left;
+}
+ul.bullet-points {
+    list-style-type: circle;
+}
+.bullet-points{
+    font-size: 20px;
+    text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* === skills-container === */
+.bottom-container{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 10px;
+    background-color: #0a192f;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.bottom-container> div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    font-size: 30px;
+}
+.line-skills{
+    width: 100%;
+    height: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1px;
+    padding-top: 1px;
+    border-bottom: 1px solid #fff; 
+}
+.skills-background{
+    background-color: #0a192f;
+    color: #fff;
+}
+.skills-box{
+    margin: auto;
+    width: 70%;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.skills-container {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    padding: 10px;
+}   
+.skills-item {
+    /* background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8); */
+    padding: 20px;
+    font-size: 30px;
+    text-align: left;
+    color: #fff;
+}
+.skills-item-right{
+    /* background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8); */
+    padding: 20px;
+    font-size: 25px;
+    text-align: right; 
+}
+.experiences-title{
+    padding-bottom: 5px;
+}
+.skills-title{
+    font-size: 60px;
+}
+.checked {
+    color: #4c9c9b;
+}
+.white{
+    color:white;
+}
+/* === skills-container-responsive === */
+@media only screen 
+    and (max-width: 768px){
+    .skills-container {
+        grid-template-columns: 100%;
+    }   
+    .skills-item {
+        text-align: center;
+    }
+    .skills-item-right{
+        text-align: center;
+    }   
+    .resume-container {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-gap: 10px;
+        padding: 10px;
+        color: #000000;
+        margin-bottom: 20px;
+    }  
+    .relevant-coursework-container{
+            padding-bottom: 40px;
+    }
+    .company-title{
+            font-size: 15px;
+    }
+    .relevant-coursework{
+            font-size: 20px;
+    }
+    .skills-box{
+        margin: auto;
+        width: 80%;
+        padding-top: 50px;
+        padding-bottom: 100px;
+    }
+    .bottom-container{
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 10px;
+        background-color: #0a192f;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
